--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+
+*{
+    margin:0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body{
+    font-size:16px;
+    width: 100%;
+    height: 100vh;
+    // background-color: #3C429E;
+    background-color: #1E3A8A;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color:white;
+}
