--- a/src/app/Components/weather-app/weather-app.component.html
+++ b/src/app/Components/weather-app/weather-app.component.html
@@ -1,7 +1,9 @@
 <div class="heading">
   <h1 class="head">
     Weather App
-    <span><img class="size" src="/assets/images/CloudySun.webp" /></span>
+    <span
+      ><img class="size" src="../../../../public/assets/images/CloudySun.webp"
+    /></span>
   </h1>
 
   <div class="btn-grp">
