--- a/src/app/Components/weather-app/weather-app.component.html
+++ b/src/app/Components/weather-app/weather-app.component.html
@@ -1,7 +1,7 @@
 <div class="heading">
   <h1 class="head">
     Weather App
-    <span><img class="size" src="public/assets/images/CloudySun.webp" /></span>
+    <span><img class="size" src="assets/images/CloudySun.webp" /></span>
   </h1>
 
   <div class="btn-grp">
@@ -50,7 +50,11 @@
 
         <div class="info-block">
           <div class="info-label">
-            <img src="/assets/images/min.png" />
+            <!-- <img src="/assets/images/min.png" /> -->
+            <img
+              src="https://cdn-icons-png.flaticon.com/512/1035/1035619.png"
+              alt="error in loading"
+            />
             <span>Min Temperature</span>
           </div>
           <div class="info-value">
